feat(tsyringe): add tsyringe to dependency injection
